--- a/public/404.html
+++ b/public/404.html
@@ -8,7 +8,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>NOTHING</title>
+  <title>404 Page not found &middot; NOTHING</title>
   <meta name="description" content="" />
 
   
@@ -24,7 +24,6 @@
   <link rel="shortcut icon" href="/favicon.png">
 
   
-  <link href="https://soyum2222.github.io/index.xml" rel="alternate" type="application/rss+xml" title="NOTHING" />
   
 </head>
 
@@ -50,9 +49,8 @@
 </aside>
 
     <main class="content container">
-    <div class="posts">
-
-</div>
+    <h1>404: Page not found</h1>
+<p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="https://soyum2222.github.io/">Head back home</a> to try finding it again.</p>
     </main>
 
     
