--- a/panic/index.html
+++ b/panic/index.html
@@ -253,7 +253,7 @@ JMP	0
 看到这里算是把panic做的事情搞明白了，于是逐渐忘记了小伙伴的问题。<br>
 其实小伙伴的问题是在recover方法中发生的，recover方法需要判断  <code>argp == uintptr(p.argp)</code> ，argp是调用reccover 的方法指针，p.argp则是在gopanic方法中赋值的一个 uintptr(0),而argp参数来源是<code>reflectcall(nil, unsafe.Pointer(d.fn), deferArgs(d), uint32(d.siz), uint32(d.siz))</code> 中的  deferArgs(d) ，在gopanic 中两者相等所以能通过gorecover的判断。但是文章开头的 <code>代码1</code> 那么此处的argp参数为func闭包指针，与panic的argp不相等，所以<code>代码1</code>无法recover panic。</p>
 <p>所以看到最后我还是不明白为什么golang会这样设计，于是我删除了<code>argp == uintptr(p.argp)</code>&hellip;..</p>
-<p><img src="%22https://soyum2222.github.io/images/image01.png%22" alt="image.png" title="image"></p>
+<p><img src="https://soyum2222.github.io/images/image01.png" alt="image.png" title="image"></p>
 <p>舒服了</p>
 </p>
           <p>29 Aug 2020
