--- a/panic/index.html
+++ b/panic/index.html
@@ -273,7 +273,7 @@ JMP	0
       <div class="col s6 m10 center">&nbsp</div>
       <div class="col s3 m1">
       
-        <a class="btn-floating btn-large disabled"><i class="mdi-navigation-arrow-forward"></i></a>
+        <a class="btn-floating btn-large waves-effect waves-light" href="https://soyum2222.github.io/monkey/"><i class="mdi-navigation-arrow-forward"></i></a>
       
       </div>
     </div>
