--- a/monkey/index.html
+++ b/monkey/index.html
@@ -67,7 +67,7 @@
            
           </p>
           <p><p>翻译自 <a href="https://bou.ke/blog/monkey-patching-in-go/">https://bou.ke/blog/monkey-patching-in-go/</a></p>
-<p>很多人认为 monkey Patching 只能在动态语言中，像 Ruby 和 Python,但是并不是这样,计算器是一种愚蠢的机器,
+<p>很多人认为 monkey Patching 只能在动态语言中，像 Ruby 和 Python,但是并不是这样,计算机是一种愚蠢的机器,
 我们始终能让他做我们所想的事情！让我们看下Go函数是如何工作的，以及如何在运行时修改它。这篇文章会使用大量的 intel 汇编，
 所以我假设你已经掌握，或者在阅读时会参考查阅<a href="https://software.intel.com/en-us/articles/introduction-to-x64-assembly">相关资料</a>。</p>
 <p>如果你它如何工作的不感兴趣，并且你只想使用monkey 补丁 ，那么你可以找到<a href="https://github.com/bouk/monkey">这个</a>库</p>
