--- a/monkey/index.html
+++ b/monkey/index.html
@@ -278,7 +278,7 @@ func main() {
       <div class="col s6 m10 center">&nbsp</div>
       <div class="col s3 m1">
       
-        <a class="btn-floating btn-large disabled"><i class="mdi-navigation-arrow-forward"></i></a>
+        <a class="btn-floating btn-large waves-effect waves-light" href="https://soyum2222.github.io/scheduling1/"><i class="mdi-navigation-arrow-forward"></i></a>
       
       </div>
     </div>
